# kdevcxx_with_ai

./: CMakeLists.txt  CMakePresets.json  README.md  install.sh  install_kateplugin.sh  install_kdevplugin.sh  kdevcxx_with_ai.desktop  kdevcxx_with_ai_settings  latest_depends_releases.sh
ai_processing/: CMakeLists.txt
ai_processing/include/: ai_processing.h  expectd.h  network.h  temp_auth_data.h.example
ai_processing/include/aiprocess/: app_settings.h  change_current_dir.h  clang_format.h  clean_string.h  concepts.h  contains.h  log.h  obfuscate_text.h  path_manip_utils.h  remove_pattern.h  source_location.h  spdlog.hpp  string_view.h  trim_white_space.h  universal_config.h  universal_config.hpp
ai_processing/source/: CMakeLists.txt  ai_processing.cc  app_settings.cc  change_current_dir.cc  clang_format.cc  log.cc  network.cc
cmake/: add_engine_ut.cmake  building_config.cmake  check_term_color.cmake  check_variable_defined_and_not_empty.cmake  compile_flag_test.cmake  spdx_check.cmake
git_hooks/check_only/: pre-commit
git_hooks/full/: pre-commit
src/: CMakeLists.txt  cxx_with_gpt.cc  cxx_with_gpt.cpp  cxx_with_gpt.h  cxx_with_gpt.json  cxx_with_gpt.kcfg  cxx_with_gpt.kcfgc  cxx_with_gpt_settings.ui  document_read_only.h  info_dialog.cc  info_dialog.h  install_plugin.sh  kdevcxx_with_ai.cc  kdevcxx_with_ai.h  kdevcxx_with_ai_config_page.h  markdown_view.cc  markdown_view.h  plugin_settings.cc  plugin_settings.h  plugin_settings.ui  rcfile.ui.rc  resources.qrc  ui_cxx_with_gpt_settings.h
src/kate_with_ai/: CMakeLists.txt  kate_with_ai.cc  kate_with_ai.h  kate_with_ai.json  kate_with_ai_config_page.cc  kate_with_ai_config_page.h
src/kdevcxx_with_ai/: CMakeLists.txt  kdevcxx_with_ai.cc  kdevcxx_with_ai.h  kdevcxx_with_ai.json  kdevcxx_with_ai_config_page.cc  kdevcxx_with_ai_config_page.h
src/plugin_common/: CMakeLists.txt  info_dialog.cc  info_dialog.h  markdown_view.cc  markdown_view.h  markdown_view_test.cc  plugin_common.cc
src/plugin_common/include/: plugin_common.h
unittests/: CMakeLists.txt  clang_format_ut.cc  clean_string_ut.cc  is_valid_openai_bearer_key_ut.cc  network_ut.cc  parse_json_response_ut.cc
